[gd_scene load_steps=4 format=3 uid="uid://dp8qcil1fjge6"]

[ext_resource type="Script" path="res://scripts/Interface/dialog/cooking_dialog.gd" id="1_0y2en"]
[ext_resource type="Theme" uid="uid://dxhgocvbo582" path="res://assets/Themes/Cooking_dialog.tres" id="1_u3e1q"]
[ext_resource type="PackedScene" uid="uid://dl0dc2ub8svvk" path="res://scenes/Interface/item_grid.tscn" id="2_27um3"]

[node name="CookingDialog" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.392157)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u3e1q")
script = ExtResource("1_0y2en")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="closeButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color(1, 0.215686, 0.282353, 1)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Recipes
"

[node name="RecipeList" type="ItemList" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.909035, 0.93542, 0.945128, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Ingredients
"

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
self_modulate = Color(0.909804, 0.937255, 0.945098, 1)
layout_mode = 2

[node name="IngredientContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer" instance=ExtResource("2_27um3")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Ingredients
"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
self_modulate = Color(0.909804, 0.937255, 0.945098, 1)
layout_mode = 2

[node name="ResultContainer" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/PanelContainer2" instance=ExtResource("2_27um3")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="CookingButton" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cook"

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/closeButton" to="." method="_on_close_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer/RecipeList" to="." method="_on_recipe_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/CookingButton" to="." method="_on_cooking_button_pressed"]
